Archive2/3d/69bcd38f4bbf2a/output
main.cpp: In constructor 'abc::abc()':
main.cpp:7:15: error: cannot convert 'float (*)[10]' to 'float**' in assignment
        this->a=a;
               ^
main.cpp: In function 'int main()':
main.cpp:11:12: warning: unused variable 'a' [-Wunused-variable]
      abc * a=new abc();
            ^
